--- a/src/components/Mobile/MobileProfile/styles.css
+++ b/src/components/Mobile/MobileProfile/styles.css
@@ -1,10 +1,27 @@
+@media only screen and (max-width: 600px) {
+	#profilePicture {
+		object-fit: cover;
+		width: 80vw;
+	}	
+}
+
 #profilePicture {
 	object-fit: cover;
-	height: 40vh;
-}
+	height: 45vh;
+}	
 
 #profile {
 	width: 80vw;
 	margin: auto;
 }
 
+#profileParagraph {
+	margin-top: 0px;
+}
+
+#hi {
+	margin-bottom: 0px;
+	text-align: center;
+	font-size: 2rem;
+	color: #D8AEAE;
+}
