--- a/src/components/Mobile/MobileLayout/styles.css
+++ b/src/components/Mobile/MobileLayout/styles.css
@@ -6,6 +6,14 @@
   overflow: auto;
 }
 
+.particles {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: -100000;
+	color: red;
+}
+
 h1, h2, h3 {
 	text-align: center;
 	font-family: 'Montserrat';
