--- a/src/components/Mobile/MobileProjects/styles.css
+++ b/src/components/Mobile/MobileProjects/styles.css
@@ -18,6 +18,7 @@
 	width: 65vw;
 	margin: auto;
 	margin-bottom: 3vh;
+	z-index: -10000;
 }
 
 @media only screen and (max-width: 600px) {	
@@ -25,6 +26,7 @@
 		height: 45vw;
 		width: 80vw;
 
+		z-index: -1;
 		margin: auto;
 		object-fit: cover; /* image keeps its original aspect ratio and the image area is completely covered */
 	}
@@ -33,6 +35,7 @@
 		height: 45vw;
 		width: 80vw;
 
+		z-index: -1;
 		margin: auto;
 		object-fit: cover;
 	}
